feat: add mutation activity view
